--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "David Newman",
   "license": "ISC",
   "dependencies": {
+    "ansi-styles": "^2.2.1",
     "chalk": "^1.1.3",
+    "color-convert": "^1.3.1",
     "get-pixels": "^3.3.0",
     "image-size": "^0.5.0"
   }
