--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "chalk": "^1.1.3",
     "color-convert": "^1.3.1",
     "get-pixels": "^3.3.0",
-    "image-size": "^0.5.0"
+    "image-size": "^0.5.0",
   }
 }
